Wed Aug 13 11:17:15 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: when the parent process doesn't exist,
	  we die after session ended.  This is a semi decent (not really,
	  but it's simple) way to handle the main daemon crashing.

Wed Aug 13 10:56:52 2003  George Lebl <jirka@5z.com>

	* daemon/misc.c: try /dev/fd (FreeBSD equivalent of /proc/self/fd) as
	  well, and also ignore entries starting with '.', just in case.

Wed Aug 13  Brian Cameron <Brian.Cameron@Sun.COM>

	* acconfig.h, configure.in: add check for fbconsole (fallback
	  (console)
	* daemon/server.c: add call to start fbconsole (if present)
          after the Xserver starts.

Tue Aug 12 17:48:45 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c: check operating system on startup

Mon Aug 11 09:38:08 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: whack a doubled paragraph.

Fri Aug 08 17:20:59 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: fill in missing info in the theme manual

	* gui/greeter/greeter_geometry.c, gui/greeter/greeter_item.h,
	  gui/greeter/greeter_parser.c:
	  respect negative coordinates with "-0", must store the
	  negativity in a flag for that.

	* gui/greeter/greeter_item_pam.c: break all pam messages at
	  50 columns, not just pam-error (actually those are not
	  all pam messages we just call them that)

	* gui/greeter/greeter_parser.c: parse "active" for text
	  items, not just prelight and normal.
	  
	* gui/greeter/greeter_item.c: fix typo in g_warning

Fri Aug 08 09:35:41 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.100

Thu Aug 07 17:59:25 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, config/gdm.conf.in: Remove
	  the SessionMaxFile key since it wasn't used anyway (we've killed
	  the GNOME session chooser).  Also fixup the comment on XDMCP
	  enabling.

	* docs/C/gdm.xml: add more comments on security of XDMCP, fixup
	  the screen sections a bit, whack SessionMaxFile entry
