@@ -3206,6 +3206,7 @@ gdm_login_users_init (void)
 {
     GdmLoginUser *user;
     struct passwd *pwent;
+    time_t time_started;
 
     if (access (GdmDefaultFace, R_OK)) {
 	    syslog (LOG_WARNING,
@@ -3217,6 +3218,8 @@ gdm_login_users_init (void)
 	    defface = gdk_pixbuf_new_from_file (GdmDefaultFace, NULL);
     }
 
+    time_started = time (NULL);
+
     setpwent ();
 
     pwent = getpwent();
@@ -3224,7 +3227,8 @@ gdm_login_users_init (void)
     while (pwent != NULL) {
 
 	/* FIXME: fix properly, see bug #111830 */
-	if (number_of_users > 100) {
+	if (number_of_users > 500 ||
+	    time_started + 5 <= time (NULL)) {
 		user = gdm_login_user_alloc ("",
 					     9999 /*fake uid*/,
 					     "/",
